--- a/FinalProject/CustomerApplication/CustomerApplication.csproj
+++ b/FinalProject/CustomerApplication/CustomerApplication.csproj
@@ -35,4 +35,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\vendor\font-awesome\" />
+  </ItemGroup>
+
 </Project>
