--- a/FinalProject/AdminApplication/AdminApplication.csproj
+++ b/FinalProject/AdminApplication/AdminApplication.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="Models\SelectOption.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="wwwroot\js\site.js" />
   </ItemGroup>
 
