ndny 22/6/2022 session cart

--- a/FinalProject/CustomerApplication/CustomerApplication.csproj
+++ b/FinalProject/CustomerApplication/CustomerApplication.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\ShoppingCartdasdasf.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="wwwroot\lib\bootstrap\css\bootstrap-grid.css.map" />
     <None Include="wwwroot\lib\bootstrap\css\bootstrap-grid.min.css.map" />
     <None Include="wwwroot\lib\bootstrap\css\bootstrap-reboot.css.map" />
