--- a/FinalProject/AdminApplication/AdminApplication.csproj
+++ b/FinalProject/AdminApplication/AdminApplication.csproj
@@ -27,4 +27,8 @@
     <PackageReference Include="PagedList.Mvc" Version="4.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
